--- a/tests/dummy/app/templates/europe.hbs
+++ b/tests/dummy/app/templates/europe.hbs
@@ -2,5 +2,5 @@
 
 <h2>Welcome to Europe 🇪🇺 / {{model.country}}</h2>
 {{#if firstTime}}
-  <h3>You are here for the first time!</h3>
+  <h3 query-param-welcome>You are here for the first time!</h3>
 {{/if}}
